src/tests/testfiles/binary-operators/types-33.txt
Error at 3:10: Variable initialization must have the same type (have char * and char[])
char *b = "char";
     ^
